[package]
name = "rustor"
version = "0.1.0"
authors = ["Nicolas Guignard", "Thibaut Gery <thibaut.gery@gmail.com>"]

[dependencies]
termion = "1.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook",  "run-cargo-fmt", "run-cargo-clippy"]
